k8s/spring.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slotify-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slotify-backend
  template:
    metadata:
      labels:
        app: slotify-backend
    spec:
      containers:
      - name: spring
        image: slotify-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "384Mi"
            cpu: "500m"
          limits:
            memory: "768Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: spring  # Este nombre debe coincidir con el del IngressRoute
spec:
  selector:
    app: slotify-backend
  ports: # mapeo del 8080 al 80
    - protocol: TCP
      port: 80        
      targetPort: 8080
