k8s/traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.127.0.0.1.nip.io`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        - name: block-admin
      services:
        - name: keycloak
          port: 80

    - match: Host(`auth.127.0.0.1.nip.io`) || Host(`auth.10.0.2.2.nip.io`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - --api.insecure=true
            - --providers.kubernetescrd=true
            - --entrypoints.web.address=:80
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: block-admin
spec:
  ipWhiteList:
    sourceRange:
      - 10.0.0.0/8
      - 127.0.0.1/32
      - 172.16.0.0/24
      - 192.168.0.0/16
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: spring
          port: 80
